--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ pbr==5.8.0
 pendulum==2.1.2
 pexpect==4.8.0
 Pillow==9.0.1
+playsound==1.3.0
 pprintpp==0.4.0
 protobuf==3.12.4
 ptyprocess==0.7.0
@@ -68,7 +69,6 @@ SecretStorage==3.3.1
 six==1.16.0
 systemd-python==234
 tbm-utils==2.6.0
-tkinter==8.6.12
 ubuntu-advantage-tools==27.12
 ubuntu-drivers-common==0.0.0
 ufw==0.36.1
